# can-utils-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/: get-release-notes.sh
.github/workflows/: lint.yml
candumpr/: Cargo.toml  README.md
candumpr/benches/: recv_cost.rs
candumpr/benches/common/: mod.rs
candumpr/examples/: dump.rs
candumpr/src/: can.rs  format.rs  frame.rs  lib.rs  main.rs  write.rs
candumpr/src/recv/: dedicated.rs  mod.rs  receiver.rs  recvmmsg.rs  uring.rs  uring_multi.rs
candumpr/src/recv/backends/: dedicated.rs  epoll.rs  recvmmsg.rs  uring.rs  uring_multi.rs
candumpr/tests/: basic.rs  recv.rs  smoke.rs
cangenr/: Cargo.toml  README.md
docs/design/: 01-candumpr-ux.md  01-testing-strategy.md  02-candumpr-filters.md  03-candumpr-clock-correctness.md  04-candumpr-architecture.md  06-benchmarks.md
docs/design/candumpr/: 01-goals.md  02-architecture.md
docs/developer/: quickstart.md
docs/user/: candumpr-configuration.md
vcan-fixture/: Cargo.toml
vcan-fixture/src/: cmd.rs  lib.rs
