[package]
name = "candumpr"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Log CAN traffic from multiple networks"

[features]
ci = []

[dependencies]

[dev-dependencies]
ctor.workspace = true
libc.workspace = true
tracing-subscriber.workspace = true
vcan-fixture = { path = "../vcan-fixture" }
